# ggk

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  config.status
autom4te.cache/: output.0  requests  traces.0  traces.1
include/: json_parsing.h
src/: Makefile  Makefile.am  Makefile.in  standalone.cpp
src/.deps/: libggk_a-DBusInterface.Po  libggk_a-DBusMethod.Po  libggk_a-DBusObject.Po  libggk_a-GattCharacteristic.Po  libggk_a-GattDescriptor.Po  libggk_a-GattInterface.Po  libggk_a-GattProperty.Po  libggk_a-GattService.Po  libggk_a-Gobbledegook.Po  libggk_a-HciAdapter.Po  standalone-standalone.Po
